# stracking_cpp

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  compile.html  developers.html  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js  usage.html
_sources/: usage.rst.txt
cmake/: Doxyfile.in  strackingBuild.cmake  strackingConfig.cmake.in  strackingDependencies.cmake  strackingSetTestEnvironment.cmake.in  strackingUse.cmake.in
docs/source/: compile.rst  developers.rst  index.rst  intro.rst
include/: satracking
src/: CMakeLists.txt
src/satracking/: CMakeLists.txt  SaCost.cpp  SaCost.h  SaCostEuclidean.cpp  SaCostEuclidean.h  SaCostStraight.cpp  SaCostStraight.h  SaDetection.cpp  SaDetection.h  SaDetectionReader.cpp  SaDetectionReader.h  SaFramesReader.cpp  SaFramesReader.h  SaGraph.cpp  SaGraph.h  SaLinker.cpp  SaLinker.h  SaLinkerGraph.cpp  SaLinkerGraph.h  SaLinkerNaive.cpp  SaLinkerNaive.h  SaTrack.cpp  SaTrack.h  SaTracker.cpp  SaTracker.h  SaTrackerLessCost.cpp  SaTrackerLessCost.h
tests/: CMakeLists.txt
tests/data/tracks1/: detections.txt  frames.txt  track1_t001.tif  track1_t001.txt  track1_t002.tif  track1_t002.txt  track1_t003.tif  track1_t003.txt  track1_t004.tif  track1_t004.txt  track1_t005.tif  track1_t005.txt
tests/data/tracks2/: detections2.txt  frames2.txt  track2_t001.tif  track2_t001.txt  track2_t002.tif  track2_t002.txt  track2_t003.tif  track2_t003.txt  track2_t004.tif  track2_t004.txt  track2_t005.tif  track2_t005.txt  track2_t006.tif  track2_t006.txt
tests/satracking/: BellmanFord1Test.cpp  BellmanFord2Test.cpp  CMakeLists.txt  LinkerGraphTest.cpp  LinkerNaiveTest.cpp  SaTrackingTestConfig.h.in
tools/: CMakeLists.txt
tools/satracking/: CMakeLists.txt  SaFactories.cpp  SaFactories.h  main.cpp
