############################################################
#
# $Id$
#
# Copyright (c) stracking 2010
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Options
## #################################################################

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( satracking )