############################################################
#
# $Id$
#
# Copyright (c) Stracing 2021
#
# AUTHOR:
# Sylvain Prigent
# 

## #################################################################
## Add subdirectory
## #################################################################
add_subdirectory( satracking )
